fix border radius issue on safari mobile browser

--- a/src/swipe_board/swipe_board.scss
+++ b/src/swipe_board/swipe_board.scss
@@ -221,6 +221,7 @@
     border-radius: 10px;
     overflow: hidden;
     background-color: rgba($light_gray, 0.4);
+    z-index: 1;
 
     &>.col {
         padding: 10px;
